# gcode-documentation-parser

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  publish.sh  publish_output.sh  pyproject.toml  setup.cfg  update_documentation.py
.github/workflows/: publish_output.yml  test.yml
gcode_documentation_parser/: updater.py
gcode_documentation_parser/parser/: base_parser.py  parser_registry.py
gcode_documentation_parser/parser/parsers/: __init__.py  klipper.py  marlin.py  reprap.py  static.py  static_documentation.json
output/: all_codes.json  all_codes_const.js  all_codes_export.js  all_codes_window.js
tests/: test_updater.py
